samples/_failures_safe/1761531846_3561b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e638013.c: In function ‘tokenize’:
./samples/SAFE/__tmp_6e638013.c:157:30: error: expected ‘]’ at end of input
  157 |                 token.value[1
      |                              ^
      |                              ]
./samples/SAFE/__tmp_6e638013.c:157:17: error: expected declaration or statement at end of input
  157 |                 token.value[1
      |                 ^~~~~
./samples/SAFE/__tmp_6e638013.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e638013.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6e638013.c:157:17: error: expected declaration or statement at end of input
